@@ -1,10 +1,0 @@
-EXTRA_DIST = \
-    keywords.hex \
-    nobelprice.hex \
-    scientists.hex \
-    scientists.xml 
-
-DISTCLEANFILES = $(top_builddir)/examples/scientists.xml
-
-#TESTS = tests/run-dlvhex-tests.sh
-#TESTS_ENVIRONMENT = DLVHEX=dlvhex TESTDIR=$(top_srcdir)/examples/tests PARAMETERS="-s --plugindir=$(top_builddir)/src/.libs"
